--- a/.github/workflows/publish-mkdocs-to-s3.yml
+++ b/.github/workflows/publish-mkdocs-to-s3.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-      - run: pip install mkdocs-material
+        run: pip install mkdocs-material
 
       - name: Build and deploy
         uses: thomasattree/mkdocs2S3@master
