--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
     "ghcr.io/devcontainers/features/azure-cli:1": {},
     "ghcr.io/devcontainers/features/python:1": {},
     "ghcr.io/devcontainers-extra/features/mkdocs:2": {
-      "plugins": "mdocs-material" 
+      "plugins": "mkdocs-material" 
     },
     "ghcr.io/devcontainers/features/terraform:1": {}
   }
