--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,9 +3,7 @@
   "features": {
     "ghcr.io/devcontainers/features/azure-cli:1": {},
     "ghcr.io/devcontainers/features/python:1": {},
-    "ghcr.io/devcontainers-extra/features/mkdocs:2": {
-      "plugins": "mkdocs-material" 
-    },
+    "ghcr.io/devcontainers-extra/features/mkdocs:latest": {},
     "ghcr.io/devcontainers/features/terraform:1": {}
   }
 }
