--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -29,14 +29,28 @@ env:
 permissions:
   contents: read
 
+
 jobs:
+  mkdocs build:
+    permissions:
+      contents:  write 
+      pull-requests: write
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+    runs-on: ubuntu-latest
+    name: MkDocs Build
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Build with MkDocs
+      uses: romw314/mkdocs-action@v2
+      
   build_and_deploy_job:
     permissions:
       contents: read # for actions/checkout to fetch code
       pull-requests: write # for Azure/static-web-apps-deploy to comment on PRs
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
-    name: Build and Deploy Job
+    name: Build Static Site Package and Deploy Job
     steps:
       - uses: actions/checkout@v4
         with:
