--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -31,7 +31,7 @@ permissions:
 
 
 jobs:
-  mkdocs build:
+  mkdocs_build:
     permissions:
       contents:  write 
       pull-requests: write
@@ -43,7 +43,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Build with MkDocs
       uses: romw314/mkdocs-action@v2
-      
+
   build_and_deploy_job:
     permissions:
       contents: read # for actions/checkout to fetch code
