--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -41,6 +41,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set executable permission on entrypoint.sh
+        run: chmod +x /entrypoint.sh
       - name: Build with MkDocs
         uses: romw314/mkdocs-action@v2
 
