fix changed job name in needs:

--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -46,7 +46,7 @@ jobs:
         uses: romw314/mkdocs-action@v2
 
   build_and_deploy_job:
-    needs: mkdocs_build
+    needs: build
     permissions:
       contents: read # for actions/checkout to fetch code
       pull-requests: write # for Azure/static-web-apps-deploy to comment on PRs
