adding env: values for mkdocs build

--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -21,6 +21,9 @@ on:
 
 # Environment variables available to all jobs and steps in this workflow
 env:
+  config-file: "mkdocs.yml"
+  output-dir: "/site/"
+  work-dir: "./"
   APP_LOCATION: "/site/" # location of your client code
   API_LOCATION: "" # location of your api source code - optional
   APP_ARTIFACT_LOCATION: "./" # location of client code build output
