--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           config-file: "mkdocs.yml"
           output-dir: "/site/"
-          work-dir: "./"
+          workdir: "./"
 
   build_and_deploy_job:
     needs: build
