--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -42,12 +42,14 @@ jobs:
       - uses: actions/checkout@v4
         with: 
           submodules: true
-      - name: Build with MkDocs
-        uses: romw314/mkdocs-action@v2
-        with:
-          config-file: "mkdocs.yml"
-          output-dir: "/site/"
-          workdir: "./"
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip     # install pip
+          python3 -m pip install mkdocs            # install mkdocs 
+          python3 -m pip install mkdocs-material   # install material theme
+      - name: MkDocs Build
+        run: |
+          mkdocs build
 
   build_and_deploy_job:
     needs: build
