--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -33,7 +33,7 @@ permissions:
 jobs:
   build:
     permissions:
-      contents:  write 
+      contents: write 
       pull-requests: write
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
@@ -50,6 +50,13 @@ jobs:
       - name: MkDocs Build
         run: |
           mkdocs build
+      - name: Commit built site
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add site
+          git commit -m 'Update MkDocs built site'
+          git push
 
   build_and_deploy_job:
     needs: build
