--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -55,7 +55,7 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add site
-          git commit -m 'Update MkDocs built site'
+          git commit -m 'Github workflow build of MkDocs site'
           git push
 
   build_and_deploy_job:
@@ -70,6 +70,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
+      - name: Pull latest changes
+        run: git pull
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
