--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -55,8 +55,12 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add site
-          git commit -m 'Github workflow build of MkDocs site'
-          git push
+          if [ -n "$(git status --porcelain)" ]; then
+            git commit -m 'Github workflow build of MkDocs site'
+            git push
+          else
+            echo "No changes to commit"
+          fi
 
   build_and_deploy_job:
     needs: build
