--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -15,9 +15,12 @@ name: Deploy web app to Azure Static Web Apps
 on:
   push:
     branches: [ "main" ]
+    paths: ['docs/**']
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches: [ "main" ]
+    paths: ['docs/**']
+
 
 # Environment variables available to all jobs and steps in this workflow
 env:
